View Issue Details

IDProjectCategoryView StatusLast Update
0026284Open CASCADEOCCT:Visualizationpublic2015-10-23 20:50
ReportervpaAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.9.0 
Target Version6.9.1Fixed in Version6.9.1 
Summary0026284: Visualization - eliminate recursion in SelectMgr_SelectionManager
DescriptionThere are a few places in SelectMgr_SelectionManager where handling of objects without own presentations may turn into infinite loop due to the function is called recursively with the object itself as an argument. For example,

for (PrsMgr_ListOfPresentableObjectsIter anChildrenIter (theObj->Children()); anChildrenIter.More(); anChildrenIter.Next())
  {
    ClearSelectionStructures (theObj, theMode, theSelector);
  }
Steps To ReproduceOCC26284 in QABugs_19.cxx
TagsNo tags attached.
Test case numberbugs vis bug26284

Relationships

related to 0024623 closedbugmaster Visualization - improve selection mechanism 

Activities

git

2015-05-28 13:27

administrator   ~0041655

Branch CR26284 has been created by vpa.

SHA-1: 217cf6d7f0a8daa3cd54381ed04544ac0a18d20d


Detailed log of new commits:

Author: vpa
Date: Thu May 28 13:27:34 2015 +0300

    0026284: Visualization - eliminate recursion in SelectMgr_SelectionManager

git

2015-05-28 15:36

administrator   ~0041674

Branch CR26284 has been updated forcibly by vpa.

SHA-1: 7dd745b70b49b0fd412a48fe1b52ce6e80983f69

vpa

2015-05-28 15:38

developer   ~0041675

Dear Kirill,

please review patch in branch CR26284.

kgv

2015-05-28 22:56

developer   ~0041691

Please test the patch.

git

2015-05-29 16:46

administrator   ~0041753

Branch CR26284 has been updated forcibly by mkv.

SHA-1: 8f6a21dbf0a68e5a0a38045e94d3998c385e7f20

mkv

2015-06-01 19:49

tester   ~0041812

Dear BugMaster,
Branch CR26284 was rebased on current master of occt git-repository.
SHA-1: 8f6a21dbf0a68e5a0a38045e94d3998c385e7f20

mkv

2015-06-01 19:50

tester   ~0041813

Dear BugMaster,
Branch CR26284 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 8f6a21dbf0a68e5a0a38045e94d3998c385e7f20

Number of compiler warnings:

occt component :
Linux: 25 (25 on master)
Windows: 0 (0 on master)

products component :
Linux: 37 (37 on master)
Windows: 0 (0 on master)

Regressions/Differences/Improvements:
http://occt-tests/CR26284-master-occt-64/Debian70-64/bugs/vis/bug5682.html
bugs vis bug5682: FAILED
http://occt-tests/CR26284-master-occt-64/Debian70-64/perf/ncollection/A1.html
perf ncollection A1: FAILED

Testing cases:
http://occt-tests/CR26284-master-occt-64/Debian70-64/bugs/vis/bug26284.html
http://occt-tests/CR26284-master-occt-64/Windows-64-VC10/bugs/vis/bug26284.html
bugs vis bug26284: OK

Testing on Linux:
occt component :
Total MEMORY difference: 97306511 / 96976401 [+0.34%]
Total CPU difference: 17940.419999999867 / 18425.280000000086 [-2.63%]
products component :
Total MEMORY difference: 23973145 / 24082869 [-0.46%]
Total CPU difference: 7699.170000000023 / 7841.8200000000215 [-1.82%]

Testing on Windows:
occt component :
Total MEMORY difference: 56985823 / 56883470 [+0.18%]
Total CPU difference: 17524.169533698998 / 17387.82465969882 [+0.78%]
products component :
Total MEMORY difference: 15394675 / 15399387 [-0.03%]
Total CPU difference: 6181.258823199973 / 6256.747707099968 [-1.21%]

There are no differences in images found by testdiff.

git

2015-06-01 19:50

administrator   ~0041814

Branch CR26284 has been updated by mkv.

SHA-1: d6240c454a237325fb6b63d217ca2a4f57837380


Detailed log of new commits:

Author: mkv
Date: Mon Jun 1 19:49:31 2015 +0300

    Small correction ot test case for issue CR26284

vpa

2015-06-02 13:44

developer   ~0041836

Dear Mikhail,

regressions in bugs/vis/bug5682 and perf/ncollection/A1 can not be caused by this patch due to code changed in CR26284 is not called in these tests. Moreover, bugs/vis/bug5682 seems to be instable: on my PC, 5 of 10 runs of this test ended with FAILED status on OCCT 6.9.0 release built in optimized mode. Please, check these tests once again.

mkv

2015-06-03 10:29

tester   ~0041890

OK.
Branch CR26284 is TESTED.

git

2015-07-27 13:34

administrator   ~0043508

Branch CR26284 has been deleted by kgv.

SHA-1: d6240c454a237325fb6b63d217ca2a4f57837380

Related Changesets

occt: master e11850fd

2015-06-04 11:37:52

vpa


Committer: bugmaster Details Diff
0026284: Visualization - eliminate recursion in SelectMgr_SelectionManager

Small correction of test case for issue CR26284
Affected Issues
0026284
mod - src/QABugs/QABugs_19.cxx Diff File
mod - src/SelectMgr/SelectMgr_SelectionManager.cxx Diff File
add - tests/bugs/vis/bug26284 Diff File

Issue History

Date Modified Username Field Change
2015-05-28 12:46 vpa New Issue
2015-05-28 12:46 vpa Assigned To => kgv
2015-05-28 12:47 vpa Assigned To kgv => vpa
2015-05-28 12:47 vpa Status new => assigned
2015-05-28 12:48 vpa Description Updated
2015-05-28 13:27 git Note Added: 0041655
2015-05-28 15:36 git Note Added: 0041674
2015-05-28 15:38 vpa Note Added: 0041675
2015-05-28 15:38 vpa Assigned To vpa => kgv
2015-05-28 15:38 vpa Status assigned => resolved
2015-05-28 15:38 vpa Steps to Reproduce Updated
2015-05-28 22:56 kgv Note Added: 0041691
2015-05-28 22:56 kgv Assigned To kgv => bugmaster
2015-05-28 22:56 kgv Status resolved => reviewed
2015-05-29 12:14 kgv Relationship added related to 0024623
2015-05-29 12:44 mkv Assigned To bugmaster => mkv
2015-05-29 16:46 git Note Added: 0041753
2015-06-01 19:49 mkv Note Added: 0041812
2015-06-01 19:50 mkv Note Added: 0041813
2015-06-01 19:50 mkv Assigned To mkv => vpa
2015-06-01 19:50 mkv Status reviewed => feedback
2015-06-01 19:50 git Note Added: 0041814
2015-06-01 19:51 mkv Test case number => bugs vis bug26284
2015-06-02 13:34 vpa Assigned To vpa => mkv
2015-06-02 13:44 vpa Note Added: 0041836
2015-06-03 10:29 mkv Note Added: 0041890
2015-06-03 10:29 mkv Assigned To mkv => bugmaster
2015-06-03 10:29 mkv Status feedback => tested
2015-06-05 15:00 bugmaster Changeset attached => occt master e11850fd
2015-06-05 15:00 bugmaster Status tested => verified
2015-06-05 15:00 bugmaster Resolution open => fixed
2015-07-27 13:34 git Note Added: 0043508
2015-08-26 11:08 abv Target Version 7.0.0 => 6.9.1
2015-10-16 14:56 aiv Status verified => closed
2015-10-23 20:50 aiv Fixed in Version => 6.9.1