0026284: Visualization - eliminate recursion in SelectMgr_SelectionManager

Small correction of test case for issue CR26284